--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "aws-cdk": "^1.0.0"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "^1.0.0",
+    "@aws-cdk/aws-ec2": "^1.0.0",
+    "@aws-cdk/aws-ecs": "^1.0.0",
+    "@aws-cdk/aws-ecs-patterns": "^1.0.0",
+    "@aws-cdk/aws-lambda": "^1.0.0",
     "@aws-cdk/core": "^1.0.0",
     "source-map-support": "^0.5.9"
   }
