change to app dir

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,6 +26,12 @@ phases:
   build:
     commands:
 
+      # change to app dir
+      - cd src/AppBase/
+      # situational awareness
+      - cd src/AppBase/
+      - ls -ltar
+      - pwd
       # synthesize templates
       - cdk synth
       # scan templates with cfn_nag 
